# cherry

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: publish.yml
cherry/: Cargo.toml  README.md
cherry-derive/: Cargo.toml  README.md
cherry-derive/src/: derive_cherry.rs  impl_cherry.rs  lib.rs
cherry-sql/: Cargo.toml
cherry-sql/src/: dialect.rs  lib.rs  restrict.rs
cherry-sql/src/insert/: mod.rs
cherry-sql/src/select/: mod.rs
cherry/src/: adapter.rs  arguments.rs  cherry.rs  config.rs  connection.rs  datasource.rs  error.rs  executor.rs  lib.rs  pool.rs  pools.rs  provider.rs  query.rs  query_result.rs  row.rs  rows.rs  tx.rs
cherry/src/adapt/: mod.rs  pool.rs  row.rs  transaction.rs
cherry/src/adapter/: arguments.rs  database.rs  mod.rs  pool.rs  row.rs
cherry/src/arguments/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
cherry/src/clause/: end.rs  insert_conflict.rs  mod.rs  select_column.rs  set_column.rs  set_value.rs  update_set.rs  update_set_column.rs  where_column.rs  where_value.rs
cherry/src/crud/: end.rs  mod.rs  provider.rs  where.rs
cherry/src/crud/insert/: insert.rs  mod.rs
cherry/src/crud/select/: mod.rs  select.rs
cherry/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
cherry/src/delete/: mod.rs
cherry/src/execute/: mod.rs
cherry/src/insert/: mod.rs
cherry/src/mssql/: mod.rs  template.rs
cherry/src/mysql/: arguments.rs  mod.rs  template.rs
cherry/src/old/insert/: insert.rs  mod.rs
cherry/src/pool/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
cherry/src/postgres/: template.rs
cherry/src/query/: auto_impl.rs  delete.rs  end.rs  insert.rs  insert_update.rs  mod.rs  provider.rs  query_builder.rs  raw_sql.rs  select.rs  set.rs  update.rs  where.rs
cherry/src/query.old/: gen_impl.rs  mod.rs  select.rs  update.rs
cherry/src/query/delete/: delete.rs
cherry/src/query/enhance/: mod.rs  query.rs
cherry/src/query/insert/: insert.rs  insert_set.rs  insert_where.rs
cherry/src/query/select/: select.rs
cherry/src/query/update/: update.rs
cherry/src/query_builder/: mod.rs
cherry/src/query_builder/delete/: mod.rs
cherry/src/query_builder/end/: mod.rs  section.rs
cherry/src/query_builder/insert/: mod.rs
cherry/src/query_builder/select/: mod.rs
cherry/src/query_builder/set_clause/: mod.rs
cherry/src/query_builder/update/: mod.rs
cherry/src/query_builder/where/: condition.rs  mod.rs
cherry/src/query_builder/where_clause/: condition.rs  mod.rs
cherry/src/query_internal/: end.rs  mod.rs  provider.rs  query.rs  set.rs  set_column.rs  where.rs  where_column.rs
cherry/src/query_internal/delete/: delete.rs
cherry/src/query_internal/insert/: insert.rs  insert_set.rs  insert_where.rs  mod.rs
cherry/src/query_internal/select/: select.rs
cherry/src/query_internal/update/: update.rs
cherry/src/row/: mod.rs
cherry/src/sql/: builder.rs  condition.rs  end_clause.rs  filter.rs  filter_statement.rs  mod.rs  select_column.rs  select_statement.rs  update_set_clause.rs  where_clause.rs  where_condition.rs
cherry/src/sql/delete/: mod.rs
cherry/src/sql/end/: mod.rs  section.rs
cherry/src/sql/insert/: mod.rs
cherry/src/sql/select/: mod.rs
cherry/src/sql/set_clause/: mod.rs
cherry/src/sql/update/: mod.rs
cherry/src/sql/where_clause/: condition.rs  mod.rs
cherry/src/sqlite/: template.rs
cherry/src/statement/: mod.rs
cherry/src/statement/end/: mod.rs  section.rs
cherry/src/statement/select/: mod.rs
cherry/src/statement/where/: condition.rs  mod.rs
cherry/src/types/: query_result.rs
cherry/src/update/: mod.rs
cherry/tests/: derive_test.rs  insert_test.rs  migrations.sql  pool_test.rs
example/: Cargo.toml  config.toml  db.toml  model.sql
example/src/: datasource.rs  main.rs  model.rs  simple.rs
src/: cherry.rs  connection.rs  datasource.rs  lib.rs  types.rs
src/query/: gen_impl.rs  insert.rs  insert_update.rs  query_builder.rs  select.rs  update.rs
