[workspace]
members = ["cherry-derive", "cherry"]

[workspace.package]
version = "0.3.0"
authors = ["bitlabx <hellobug996@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitlabx/cherry"
keywords = ["ORM", "MySQL", "PostgreSQL", "SQLite", "SQLServer"]
description = "An asynchronous ORM, support MySQL, PostgreSQL, SQLite and SQL Server."

[workspace.dependencies]
log = "0.4.17"
anyhow = "1.0.66"
async-std = "1.12.0"
futures-core = "0.3.25"
sqlx = "0.6.2"
serde = "1.0.149"
serde_derive = "1.0.149"
chrono = "0.4.23"

proc-macro2 = "1.0.47"
syn = "1.0.105"
quote = "1.0.21"
heck = "0.3.3"