[workspace]
members = ["cherry-sql", "cherry-derive", "cherry", "example"]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["oobot <hellobug996@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oobot/cherry"
keywords = ["ORM", "MySQL", "PostgreSQL", "SQLite"]
description = "A Rust async ORM, support for MySQL, PostgreSQL and SQLite."

[workspace.dependencies]
anyhow = "1.0.66"
async-std = "1.12.0"
futures-core = "0.3.25"
sqlx = "0.7.4"
toml = "0.8.12"
chrono = "0.4.23"

proc-macro2 = "1.0.47"
syn = "1.0.105"
quote = "1.0.21"
heck = "0.3.3"
