[package]
name = "cherry-derive"
version = "0.3.0"
authors = ["bitlabx <hellobug996@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitlabx/cherry"
keywords = ["ORM", "MySQL", "PostgreSQL", "SQLite", "SQLServer"]
description = "An asynchronous ORM, support MySQL, PostgreSQL, SQLite and SQL Server."

[lib]
name = "cherry_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
syn = "1.0.68"
quote = "1.0.10"
heck = "0.3.2"
