[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
toml = "0.5.8"

cherry = {package = "cherry", path = "../cherry", features = ["mysql", "json"]}
cherry-derive = {package = "cherry-derive", path = "../cherry-derive" }
